# structure

./: .gitignore  CMakeLists.txt
include/structure/defines/export/: export.h
include/structure/defines/handle/: opaque_handle.h
include/structure/details/list/double_linked/: dlist_init.h  dlist_manip.h  dlist_node.h  dlist_types.h
include/structure/details/list/single_linked/: slist_atomic.h  slist_init.h  slist_manip.h  slist_mman.h  slist_types.h
include/structure/details/mman/default/: mman_default.h
include/structure/details/queue/circular/: cqueue_init.h  cqueue_manip.h  cqueue_types.h
include/structure/details/queue/linear/: lqueue_init.h  lqueue_manip.h  lqueue_types.h
include/structure/export/interface/list/: double_linked.h  single_linked.h
include/structure/export/interface/queue/: circular.h  mpmc.h  spsc.h
include/structure/export/list/: double_linked.h  single_linked.h
include/structure/export/queue/circular/: circular.h
include/structure/export/queue/lockfree/: mpmc.h  spsc.h
include/structure/list/: double_linked.h  double_linked_init.h  double_linked_manip.h  double_linked_node.h  single_linked.h  single_linked_init.h  single_linked_manip.h  single_linked_node.h  single_linked_type.h
include/structure/list/double_linked/: double_linked_init.h  double_linked_manip.h  double_linked_node.h  double_linked_type.h
include/structure/list/single_linked/: single_linked_init.h  single_linked_manip.h  single_linked_node.h  single_linked_type.h
include/structure/mman/: mman.h  mman_default.h
include/structure/queue/circular/: circular_queue_init.h  circular_queue_manip.h  circular_queue_node.h  circular_queue_types.h
include/structure/queue/linear/: linear_queue.h  linear_queue_init.h  linear_queue_manip.h  linear_queue_node.h  linear_queue_type.h
include/structure/queue/mpmc/: mpmc_init.h  mpmc_manip.h  mpmc_type.h
include/structure/queue/mpmc/details/: mpmc_queue_init.h  mpmc_queue_manip.h  mpmc_queue_type.h
include/structure/queue/priority/: priority_queue_init.h  priority_queue_pop.h  priority_queue_push.h  priority_queue_type.h
include/structure/queue/priority/details/: pqueue_init.h  pqueue_node.h  pqueue_node_key.h  pqueue_pop.h  pqueue_push.h  pqueue_type.h
include/structure/queue/spsc/: spsc_init.h  spsc_manip.h  spsc_type.h
include/structure/queue/spsc/details/: spsc_queue_init.h  spsc_queue_manip.h  spsc_queue_type.h
include/structure/vector/details/: structure_vector_init.h  structure_vector_type.h
libs/x64/debug/: synapse-structure-list.idb  synapse-structure-list.lib  synapse-structure-queue.idb  synapse-structure-queue.lib  synapse-structure.lib
libs/x64/debug/lib-list/: synapse-structure-dlist.idb  synapse-structure-dlist.lib  synapse-structure-list.idb  synapse-structure-list.lib
libs/x64/debug/lib-queue/: synapse-structure-cqueue.idb  synapse-structure-cqueue.lib  synapse-structure-queue.idb  synapse-structure-queue.lib  synapse_structure_pqueue.idb  synapse_structure_pqueue.lib
project_files/vs2022/synapse-structure/: synapse-structure.sln
project_files/vs2022/synapse-structure-queue/: synapse-structure-queue.sln
project_files/vs2022/synapse-structure-queue/synapse-structure-cqueue/: synapse-structure-cqueue.vcxproj  synapse-structure-cqueue.vcxproj.filters
project_files/vs2022/synapse-structure-queue/synapse-structure-queue/: synapse-structure-queue.vcxproj  synapse-structure-queue.vcxproj.filters
project_files/vs2022/synapse-structure-queue/synapse_structure_pqueue/: synapse_structure_pqueue.vcxproj  synapse_structure_pqueue.vcxproj.filters
project_files/vs2022/synapse-structure/synapse-structure-dlist/: synapse-structure-dlist.vcxproj  synapse-structure-dlist.vcxproj.filters
project_files/vs2022/synapse-structure/synapse-structure-list/: synapse-structure-list.vcxproj  synapse-structure-list.vcxproj.filters
project_files/vs2022/synapse-structure/synapse-structure-queue/: synapse-structure-queue.vcxproj  synapse-structure-queue.vcxproj.filters
source/c/details/list/: dlist_init.c  dlist_manip.c  slist_init.c  slist_manip.c  slist_mman.c
source/c/details/mman/: mman_default.c
source/c/details/queue/circular/: cqueue_init.c  cqueue_manip.c
source/c/list/: dlist.c  slist.c
source/c/list/double_linked/: CMakeLists.txt  double_linked_manip.c
source/c/list/double_linked/details/: dlist_init.c  dlist_manip.c  dlist_node.c
source/c/list/single_linked/: .CMakeLists.txt.swp  CMakeLists.txt  slist.c
source/c/list/single_linked/details/: slist_init.c  slist_manip.c  slist_node.c
source/c/list/single_linked/details/linux/: slist_init.c  slist_manip.c
source/c/mman/: default.c
source/c/queue/circular/: CMakeLists.txt  circular_queue_init.c  circular_queue_manip.c  circular_queue_node.c
source/c/queue/circular/details/: cqueue_init.c
source/c/queue/linear/: linear_queue_init.c  linear_queue_manip.c  linear_queue_node.c
source/c/queue/mpmc/: CMakeLists.txt  mpmc_init.c
source/c/queue/mpmc/details/: mpmc_queue_manip.c
source/c/queue/priority/: priority_queue_init.c  priority_queue_pop.c  priority_queue_push.c
source/c/queue/spsc/: CMakeLists.txt
source/c/vector/details/: structure_vector_init.c
source/lib/: CMakeLists.txt
source/lib/list/double_linked/: double_linked_init.c  double_linked_node.c
source/lib/list/double_linked/details/: dlist_init.c  dlist_manip.c  dlist_node.c
source/lib/list/single_linked/: slist.c
source/lib/list/single_linked/details/: slist_init.c  slist_manip.c
source/lib/queue/circular/: circular_queue_init.c  circular_queue_manip.c
source/lib/queue/circular/details/: cqueue_manip.c
source/lib/queue/mpmc/: mpmc_manip.c
source/lib/queue/mpmc/details/: mpmc_queue_init.c  mpmc_queue_manip.c
source/lib/queue/spsc/: spsc_init.c  spsc_manip.c
source/lib/queue/spsc/details/: spsc_queue_init.c  spsc_queue_manip.c
source/shared_libs/: CMakeLists.txt
source/shared_libs/list/: double_linked.c  single_linked.c
source/shared_libs/queue/: circular.c
source/shared_libs/queue/lockfree/: mpmc.c  spsc.c
(+47 files in other folders)
